WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102044
Fix the ARM traditional build after
r134332
https://bugs.webkit.org/show_bug.cgi?id=102044
Summary
Fix the ARM traditional build after r134332
Csaba Osztrogonác
Reported
2012-11-12 21:51:04 PST
In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatch(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146:16: error: 'startOfPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToPatchableBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Address, void*)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:159:9: error: 'revertJumpReplacementToPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:46:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatch(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146:16: error: 'startOfPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:46:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToPatchableBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Address, void*)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:159:9: error: 'revertJumpReplacementToPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler'
Attachments
speculative fix
(1.74 KB, patch)
2012-11-13 00:41 PST
,
Peter Gal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2012-11-13 00:41:50 PST
Created
attachment 173843
[details]
speculative fix
Zoltan Herczeg
Comment 2
2012-11-13 00:44:13 PST
Comment on
attachment 173843
[details]
speculative fix rs=me
Csaba Osztrogonác
Comment 3
2012-11-13 00:53:43 PST
Comment on
attachment 173843
[details]
speculative fix Clearing flags on attachment: 173843 Committed
r134383
: <
http://trac.webkit.org/changeset/134383
>
Csaba Osztrogonác
Comment 4
2012-11-13 00:53:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug