Fix the ARM traditional build after r134332 https://bugs.webkit.org/show_bug.cgi?id=102044

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2012-11-13
Reviewed by Zoltan Herczeg.

Added missing methods for the MacroAssemblerARM, based on the MacroAssemblerARMv7.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::canJumpReplacePatchableBranchPtrWithPatch):
(MacroAssemblerARM):
(JSC::MacroAssemblerARM::startOfPatchableBranchPtrWithPatch):
(JSC::MacroAssemblerARM::revertJumpReplacementToPatchableBranchPtrWithPatch):

Canonical link: https://commits.webkit.org/120122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134383 268f45cc-cd09-0410-ab3c-d52691b4dbfc